--- a/defaultFE/src/scss/styles.scss
+++ b/defaultFE/src/scss/styles.scss
@@ -70,7 +70,7 @@ $colorsListVar : (
     &__bg-cont {
         width: 100%;
         height: 100%;
-        position: absolute;
+        position: fixed;
         top: 0;
         left: 0;
         overflow: hidden;
